--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,29 @@
 version: '3'
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: laravel_app
-    volumes:
-      - ./:/var/www/html
-      - ./database:/var/www/html/database
-    environment:
-      - DB_CONNECTION=sqlite
-      - DB_DATABASE=/var/www/html/database/database.sqlite
-    restart: unless-stopped
+    app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: laravel_app_test
+        volumes:
+            - ./:/var/www/html:delegated
+            - ./vendor:/var/www/html/vendor:delegated
+            - ./storage:/var/www/html/storage:delegated
+            - ./bootstrap/cache:/var/www/html/bootstrap/cache:delegated
+        environment:
+            - DB_CONNECTION=sqlite
+            - DB_DATABASE=/var/www/html/database/database.sqlite
+            - COMPOSER_ALLOW_SUPERUSER=1
+        restart: unless-stopped
 
-  nginx:
-    image: nginx:alpine
-    container_name: laravel_nginx
-    ports:
-      - "8084:80"
-    volumes:
-      - ./:/var/www/html
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - app
-    restart: unless-stopped
+    nginx:
+        image: nginx:alpine
+        container_name: laravel_nginx
+        ports:
+            - "8084:80"
+        volumes:
+            - ./:/var/www/html:delegated
+            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - app
+        restart: unless-stopped
