--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,33 @@
-version: '3'
 services:
-    app:
-        build:
-            context: .
-            dockerfile: Dockerfile
-        container_name: laravel_app_test_1
-        volumes:
-            - ./:/var/www/html:delegated
-            - vendor_volume:/var/www/html/vendor
-            - ./storage:/var/www/html/storage:delegated
-            - ./bootstrap/cache:/var/www/html/bootstrap/cache:delegated
-        environment:
-            - DB_CONNECTION=sqlite
-            - DB_DATABASE=/var/www/html/database/database.sqlite
-            - APP_ENV=local
-            - APP_DEBUG=true
-            - APP_URL=http://localhost:8084
-            - COMPOSER_ALLOW_SUPERUSER=1
-        restart: unless-stopped
+  app:
+    build:
+      context: .
+      dockerfile: docker-php/Dockerfile
+    container_name: laravel_app_test_1
+    user: ${UID}:${GID}
+    volumes:
+      - ./:/var/www/html
+      - vendor_volume:/var/www/html/vendor
+    environment:
+      DB_CONNECTION: sqlite
+      DB_DATABASE: /var/www/html/database/database.sqlite
+      APP_ENV: local
+      APP_DEBUG: true
+      APP_URL: http://localhost:8084
+      COMPOSER_ALLOW_SUPERUSER: 1
+    restart: unless-stopped
 
-    nginx:
-        image: nginx:alpine
-        container_name: laravel_nginx_1
-        ports:
-            - "8084:80"
-        volumes:
-            - ./:/var/www/html:delegated
-            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-        depends_on:
-            - app
-        restart: unless-stopped
+  nginx:
+    image: nginx:alpine
+    container_name: laravel_nginx_1
+    ports:
+      - "8084:80"
+    volumes:
+      - ./:/var/www/html
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+    restart: unless-stopped
 
 volumes:
-    vendor_volume:
+  vendor_volume:
